fixed image resizing incorrectly on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,9 @@ body {
     text-align: center;
     margin: 0;
 }
-.intro{
-    padding-top:55px;
+
+.intro {
+    padding-top: 55px;
 }
 
 /*This is to set the line break to dotted style*/
@@ -83,8 +84,8 @@ h3 {
 
 .top-container {
     background-color: #85FFBD;
-background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
-        
+    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+
     position: relative;
     padding-top: 135px;
 }
@@ -97,10 +98,16 @@ background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
     background-color: #66BFBF;
     padding: 50px 0 20px;
 }
+
 .mountain {
+    height: auto;
     position: relative;
     margin-top: 40px;
 }
+/* this allow us to resize image based on device */
+img {
+    max-width: 100%;
+  }
 
 
 
